# roxmltree

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md
.github/workflows/: main.yml
benches/: .gitattributes  Cargo.toml  attributes.py  attributes.xml  cdata.py  cdata.xml  fonts.conf  huge.xml  large.plist  text.py  text.xml  xml.rs
docs/: parsing.md
examples/: ast.rs  print_pos.rs  stats.rs
src/: lib.rs  parse.rs  tokenizer.rs  tokenizer_tests.rs
test-apps/minidom-app/: Cargo.toml  app.rs
test-apps/null-app/: Cargo.toml
test-apps/roxmltree-app/: Cargo.toml  app.rs
test-apps/sxd-app/: Cargo.toml  app.rs
test-apps/xmltree-app/: Cargo.toml  app.rs
testing-tools/: lxml-ast.py  test-lxml.py
testing-tools/afl-fuzz/: Cargo.toml
testing-tools/afl-fuzz/in/: 1.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml
testing-tools/afl-fuzz/src/: main.rs
tests/: api.rs  ast.rs  dom-api.rs
tests/files/: README.md  attrs_001.xml  attrs_002.xml  attrs_002.yaml  attrs_003.xml  attrs_003.yaml  attrs_004.xml  attrs_004.yaml  attrs_005.xml  attrs_005.yaml  attrs_006.xml  attrs_006.yaml  attrs_err_001.xml  attrs_err_001.yaml  attrs_err_002.xml  attrs_err_002.yaml  cdata_001.yaml  cdata_002.xml  cdata_002.yaml  cdata_003.xml  cdata_003.yaml  cdata_004.xml  cdata_004.yaml  cdata_005.xml  cdata_005.yaml  cdata_006.xml  cdata_006.yaml  cdata_007.xml  cdata_007.yaml  cdata_008.xml  cdata_008.yaml  cdata_009.xml  cdata_009.yaml  comments_001.xml  comments_001.yaml  elems_err_001.xml  elems_err_001.yaml  elems_err_002.xml  elems_err_002.yaml  entity_001.xml  (+133 more)
