[package]
name = "roxmltree"
version = "0.19.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["xml", "parser", "tree", "dom"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
description = "Represent an XML as a read-only tree."
repository = "https://github.com/RazrFalcon/roxmltree"
documentation = "https://docs.rs/roxmltree/"
readme = "README.md"
edition = "2021"
rust-version = "1.60"

[workspace]
members = ["benches"]
exclude = ["testing-tools"]

[features]
default = ["std", "positions"]
std = []
# Enables Nodes and Attributes position in the original document preserving.
# Increases memory usage by `Range<usize>` for each Node and Attribute.
positions = []
# Enables ranges for each Attribute's qname and value individually.
# Increases memory usage by two `u8`s for each Attribute.
positions-extra-attr = ["positions"]
