[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"
workspace = ".."

[dependencies]
bencher = "0.1"
minidom = "0.12"
quick-xml = "0.18"
roxmltree = { path = "../" }
sxd-document = "0.3"
xml-rs = "0.8"
xmlparser = "0.13"
xmltree = "0.10"

[[bench]]
name = "benchmark"
path = "xml.rs"
harness = false
